# manos

./: README.md  complete_manos_pc.rosinstall  install_all.bash
manos/: CMakeLists.txt  package.xml
manos_admittance_control/: CMakeLists.txt  package.xml
manos_admittance_control/config/: admittance_params.yaml
manos_admittance_control/include/: AdmittanceController.h
manos_admittance_control/launch/: admittance_controller.launch
manos_admittance_control/src/: AdmittanceController.cpp  admittance_controller_node.cpp
manos_bringup/: CMakeLists.txt  package.xml
manos_bringup/config/: manos.rviz  manos_calibration.yaml  manos_controllers.yaml  schunk_pg70.yaml
manos_bringup/launch/: manos_bringup.launch  manos_bringup_updated_driver.launch  manos_bringup_v2020.launch  ur3_bringup.launch
manos_cartesian_control/: README.md
manos_cartesian_control/cartesian_state_msgs/: CMakeLists.txt  package.xml
manos_cartesian_control/ur3_cartesian_velocity_control/: CMakeLists.txt  README.md  package.xml  ur3_cartesian_velocity_control_plugin.xml
manos_cartesian_control/ur3_cartesian_velocity_control/include/ur3_cartesian_velocity_control/: cartesian_velocity_controller.h
manos_cartesian_control/ur3_cartesian_velocity_control/src/: cartesian_state_controller.cpp  cartesian_velocity_controller.cpp
manos_cartesian_velocity_control/: CMakeLists.txt  manos_cartesian_velocity_control_plugin.xml  package.xml
manos_cartesian_velocity_control/config/: controllers.yaml
manos_cartesian_velocity_control/include/manos_cartesian_velocity_control/: cartesian_state_controller.h  cartesian_velocity_controller.h  kinematic_chain_controller_base.h
manos_cartesian_velocity_control/launch/: load_controller.launch
manos_cartesian_velocity_control/src/: cartesian_state_controller.cpp  cartesian_velocity_controller.cpp
manos_description/: CMakeLists.txt  package.xml
manos_description/launch/: ur3_gazebo.launch  ur3_pg70.launch  ur3_pg70_upload.launch  ur3_table.launch  ur3_table_v2020.launch  ur3_table_v2021.launch
manos_description/meshes/schunk_pg70/: finger.stl  pg70.dae
manos_description/urdf/: ur.transmission.xacro  ur3.urdf.xacro  ur3_control.urdf.xacro  ur3_gazebo.urdf.xacro  ur3_new_driver.urdf.xacro  ur3_pg70.urdf.xacro  ur3_pg70_limited.urdf.xacro  ur3_pg70_limited_control.urdf.xacro  ur3_table.urdf.xacro  ur3_table_limited.urdf.xacro  ur3_table_limited_v2020.urdf.xacro  ur3_table_v2020.urdf.xacro
manos_description/urdf/grippers/: schunk_pg70.gazebo.xacro  schunk_pg70.transmission.xacro  schunk_pg70.urdf.xacro
manos_description/urdf/sensors/: kinect.urdf.xacro  kinect_properties.urdf.xacro
manos_fake_wrench/: CMakeLists.txt  package.xml
manos_fake_wrench/scripts/: fake_wrench.py
manos_gazebo/: CMakeLists.txt  manos_gazebo.launch  package.xml
manos_gazebo/config/: joint_state_controller.yaml  manos_cartesian_controller.yaml  manos_controller.yaml  manos_controllers.yaml
manos_gazebo/config/rviz/: manos.rviz
manos_gazebo/launch/: manos_gazebo.launch
manos_motion_generation/: CMakeLists.txt  package.xml
manos_motion_generation/config/: linear_motion.yaml
manos_motion_generation/launch/: linear_motion_generator.launch
manos_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
manos_moveit_config/config/: controllers.yaml  controllers_pg70.yaml  fake_controllers.yaml  joint_limits.yaml  joint_limits_pg70.yaml  manos.srdf  manos_pg70.srdf  ompl_planning.yaml  simulated_controllers.yaml  simulated_controllers_pg70.yaml  xtion_astra.yaml
manos_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  manos_moveit_controller_manager.launch.xml  manos_planning_execution.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
manos_openpose_wrench/: CMakeLists.txt  package.xml
manos_openpose_wrench/scripts/: openpose_wrench.py
manos_velocity_command/: CMakeLists.txt  package.xml
manos_velocity_command/config/: data.yaml  manos_velocity_command.yaml  sim.yaml
manos_velocity_command/include/: VelocityController.h  motion_follower.hpp
manos_velocity_command/launch/: motion_replication.launch  reactive_motion.launch  velocity_controller.launch
manos_velocity_command/scripts/: count.py  points_extraction_from_yaml.py  velocity_extraction_from_yaml.py  velocity_generator.py  velocity_publish.py
manos_velocity_command/src/: VelocityController.cpp  euclidean_distance.cpp  main.cpp  motion_follower.cpp  motion_replication.cpp  sample.cpp  velocity_controller_node.cpp  velocity_equation.cpp
