<?xml version="1.0"?>
<package format="2">
  <name>manos_bringup</name>
  <version>0.0.0</version>
  <description>The manos_bringup package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>manos_description</depend>
  <depend>ur_modern_driver</depend>

  <export>
  </export>
</package>
