<?xml version="1.0"?>
<package format="2">
  <name>manos_description</name>
  <version>0.1.0</version>
  <description>The manos_description package</description>

  <maintainer email="gstavrinos@iit.demokritos.gr">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depends>ur_description</depends>
  <depends>openni_camera</depends>
  <depends>schunk_grippers</depends>

  <export>
  </export>
</package>
