<?xml version="1.0"?>
<package>
  <name>ur3_cartesian_velocity_control</name>
  <version>0.0.1</version>
  <description>The ur3_cartesian_velocity_control package</description>

  <maintainer email="tsitos@iit.demokritos.gr">Thanasis Tsitos</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>forward_command_controller</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>cartesian_state_msgs</build_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>forward_command_controller</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>kdl_conversions</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>cartesian_state_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <controller_interface plugin="${prefix}/ur3_cartesian_velocity_control_plugin.xml"/>
  </export>
</package>
